// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with all required props 1`] = `
<label
  class="FormLabel"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
</label>
`;

exports[`renders the component with an additional class name 1`] = `
<label
  class="FormLabel my-extra-class"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
</label>
`;

exports[`renders the component with an required flag 1`] = `
<label
  class="FormLabel"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
  <span
    class="FormLabel__required-text"
  >
    (
    required
    )
  </span>
</label>
`;

exports[`renders the component with required text 1`] = `
<label
  class="FormLabel"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
  <span
    class="FormLabel__required-text"
  >
    (
    pflichtfeld
    )
  </span>
</label>
`;
